--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "main": "./lib/htmlprocessor",
   "bin": {
-    "htmlprocessor": "./bin.js"
+    "htmlprocessor": "./cli.js"
   },
   "keywords": [
     "process",
