fix(attr): allow replacement with full webUris

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "optimize"
   ],
   "dependencies": {
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "nodeunit": "~0.8.6"
