--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     }
   ],
   "scripts": {
-    "test": "./node_modules/.bin/nodeunit test/test.js"
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive"
   },
   "main": "./lib/htmlprocessor",
   "bin": {
@@ -40,6 +40,7 @@
     "lodash": "~2.4.1"
   },
   "devDependencies": {
-    "nodeunit": "^0.9.1"
+    "istanbul": "^0.3.17",
+    "mocha": "^2.2.5"
   }
 }
