--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     }
   ],
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive"
+    "test": "./node_modules/.bin/mocha",
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive",
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "main": "./lib/htmlprocessor",
   "bin": {
@@ -40,6 +42,7 @@
     "lodash": "~2.4.1"
   },
   "devDependencies": {
+    "coveralls": "^2.11.3",
     "istanbul": "^0.3.17",
     "mocha": "^2.2.5"
   }
