--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.2.6",
   "author": {
     "name": "Denis Ciccale",
-    "email": "dciccale@gmail.com",
-    "url": "http://twitter.com/tdecs"
+    "url": "https://github.com/dciccale"
   },
   "repository": {
     "type": "git",
@@ -44,6 +43,6 @@
   "devDependencies": {
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0"
+    "mocha": "^8.3.2"
   }
 }
